# agentx

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
agentx/: __init__.py  app.py
agentx/agents/: __init__.py  analytics.py  interviewer.py  learning_path.py  patterns.py
agentx/config/: __init__.py  settings.py
agentx/core/: __init__.py  agent.py  context.py  llm.py  message.py  orchestrator.py  providers.py  tool.py
agentx/daemon/: __init__.py  __main__.py  runner.py  scheduler.py  server.py  watcher.py
agentx/dashboard/: __init__.py  index.html
agentx/db/: __init__.py  models.py  provider.py
agentx/evaluation/: __init__.py  guardrails.py  metrics.py  ragas.py
agentx/memory/: __init__.py  store.py
agentx/pipeline/: __init__.py  ingestion.py  knowledge.py
agentx/plugins/: __init__.py
agentx/prompts/: __init__.py  manager.py
agentx/protocols/: __init__.py  a2a.py
benchmarks/: benchmark.py
docs/: TECHNICAL_SPECIFICATION.md  blog_launch.md  index.html  launch_post.md  twitter_thread.md
examples/: 01_quickstart.py  02_custom_agent.py  03_multi_agent_pipeline.py  04_full_config.py  05_customer_support.py  06_code_review_agent.py  07_daemon_autonomous.py  08_daemon_projects.py  09_full_demo.py  interview_bot.py  simple_agent.py
scripts/: check_secrets.py
site/: index.html
tests/: test_a2a.py  test_core.py  test_daemon.py  test_moderation.py  test_pipeline.py  test_prompts.py  test_providers.py  test_rag.py  test_scaling.py  test_security.py
(+20 files in other folders)
